--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -151,7 +151,7 @@
         <h2>7. التواصل معنا</h2>
         <p>إذا كان لديك أي استفسارات حول سياسة الخصوصية، يرجى التواصل معنا عبر البريد الإلكتروني الخاص بالدعم الفني داخل
             التطبيق<br>
-            <a href="mailto:info@sahifati.org">info@sahifati.org</a>
+            <a href="mailto:info@sahifati.com">info@sahifati.com</a>
         </p>
     </div>
 </body>
